# msmacro-app

./: .gitignore  1080P_RESOLUTION_TEST_GUIDE.md  CALIBRATION_RESULTS_2025-11-09.md  FINAL_CALIBRATION_RESULTS_2025-11-09.md  MANIFEST.in  README.md  dev-scripts.sh  key_ignore_test.py  mock_backend.py  pyproject.toml  simple_ignore_test.py  test_3stage_pipeline.py  test_api.py  test_departure_points.py  test_keyboard.py  test_playlist.html  verify_implementation.sh
.claude/: settings.local.json
deploy/: deploy-unified.sh
docs/: CV_REGION_DETECTION.md
docus/: 00_OVERVIEW.md  01_ARCHITECTURE.md  02_USAGE.md  04_DETECTION_ALGORITHM.md  05_API_REFERENCE.md  06_MAP_CONFIGURATION.md  07_SYSTEM_MONITORING.md  08_OBJECT_DETECTION.md  09_DATA_FLOW.md  10_CALIBRATION_SYSTEM.md  11_CV_AUTO_ROTATION.md  12_CV_ITEM_SYSTEM.md  2K_RESOLUTION_TEST_GUIDE.md  CALIBRATION_ANNOTATION_WORKFLOW.md  CALIBRATION_TROUBLESHOOTING.md  CV_AUTO_STOP_FIX_VERIFICATION.md  CV_ITEM_IMPLEMENTATION_STATUS.md  CV_PERFORMANCE_OPTIMIZATION_IMPLEMENTATION.md  DEPLOYMENT.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_RESTRUCTURING_DEC_2024.md  MACOS_SUPPORT_COMPLETE.md  MIGRATION_NOV_2025_CALIBRATION.md  MIGRATION_NOV_2025_CV_AUTO.md  OBJECT_DETECTION_DEVELOPMENT_GUIDE.md  OBJECT_DETECTION_MAINTENANCE.md  OBJECT_DETECTION_PI_DEPLOYMENT.md  OBJECT_DETECTION_TESTING.md  PATHFINDING_FIX_VERIFICATION.md  README.md  TESTING_MACROS_SUPPORT.md  WHITE_FRAME_REMOVAL_MIGRATION.md  YUYV_DETECTION_IMPLEMENTATION.md
msmacro/: bridge.py  cli.py  daemon.py  daemon.py.bak  daemon_old.py  events.py  hidio.py  ipc.py  keymap.py  (+4 more)
(+179 files in other folders)
