[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msmacro"
version = "0.1.0"
description = "Raspberry Pi HID keyboard bridge, recorder, and player"
authors = [{ name = "MS Macro" }]
requires-python = ">=3.9"
dependencies = [
  "evdev>=1.7.1",
]

[project.scripts]
msmacro = "msmacro.cli:main"

[tool.setuptools]
packages = ["msmacro"]
include-package-data = true
