[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msmacro"
version = "0.2.0"
description = "Raspberry Pi HID keyboard bridge/recorder with daemon + web UI"
requires-python = ">=3.10"
dependencies = [
  "evdev",
  "aiohttp",
  "opencv-python",
  "numpy",
  "psutil"
]

[tool.setuptools.packages.find]
include = ["msmacro*"]

[tool.setuptools]
include-package-data = true
